k8s/e-shop-files/added/analytics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics
  template:
    metadata:
      labels:
        app: analytics
    spec:
      containers:
        - name: analytics
          image: h4mdi/analytics:latest
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: analytics
spec:
  type: ClusterIP
  ports:
    - name: "8082"
      port: 8082
      targetPort: 8080
  selector:
    app: analytics
