k8s/e-shop-files/added/basket.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: basket
  template:
    metadata:
      labels:
        app: basket
    spec:
      containers:
        - name: basket
          image: h4mdi/basket:latest
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: basket
spec:
  type: ClusterIP
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8080
  selector:
    app: basket
