k8s/e-shop-files/added/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshop-myfront
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eshop-myfront
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: eshop-myfront
    spec:
      containers:
        - name: eshop-myfront
          image: h4mdi/eshop-myfront:latest
          ports:
            - containerPort: 4200
          resources: {}
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: eshop-myfront
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4200
  selector:
    app: eshop-myfront
