k8s/e-shop-files/added/order-notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-notifications
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-notifications
  template:
    metadata:
      labels:
        app: order-notifications
    spec:
      containers:
        - name: order-notifications
          image: h4mdi/order-notifications:latest
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: order-notifications
spec:
  type: ClusterIP
  ports:
    - name: "8085"
      port: 8085
      targetPort: 8080
  selector:
    app: order-notifications
