k8s/e-shop-files/added/order-period.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-period
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-period
  template:
    metadata:
      labels:
        app: order-period
    spec:
      containers:
        - name: order-period
          image: h4mdi/order-period:latest
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: order-period
spec:
  type: ClusterIP
  ports:
    - name: "8086"
      port: 8086
      targetPort: 8080
  selector:
    app: order-period
