k8s/e-shop-files/added/order-processing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-processing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-processing
  template:
    metadata:
      labels:
        app: order-processing
    spec:
      containers:
        - name: order-processing
          image: h4mdi/order-processing:latest
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: order-processing
spec:
  type: ClusterIP
  ports:
    - name: "8084"
      port: 8084
      targetPort: 8080
  selector:
    app: order-processing
