k8s/e-shop-files/added/payment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: h4mdi/payment:latest
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: payment
spec:
  type: ClusterIP
  ports:
    - name: "8083"
      port: 8083
      targetPort: 8080
  selector:
    app: payment
